--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-173.5KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-443.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-348.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-284.8KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-527.5KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-239.0KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.45MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-405.3KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-336.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-492.2KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-190.5KB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-228.6KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇩🇪 德国-1.62MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-459.9KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-173.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-443.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-348.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-284.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-990.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-405.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-190.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-228.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-918.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
