--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-177.4KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.42MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: 120.233.186.250, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-724.2KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.59MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-895.1KB/s(Youtube:不良林), server: 13.114.218.200, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-6.13MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: cd75dfa8-e871-11ec-a3cf-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇰🇷 韩国-2.63MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-383.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: b7dcc148-c8a3-4173-931f-8ecf9413eb58, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-239.7KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-970.8KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-410.3KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-372.2KB/s(Youtube:不良林), server: 527hk5.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: 527hk5.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-307.9KB/s(Youtube:不良林), server: 18.183.213.25, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-177.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-724.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-383.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-970.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-410.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-307.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
